SERVER-95730: Fix dassert violation in MigrationChunkClonerSourceOpObserver::onBatchedWriteCommit (#28366)

GitOrigin-RevId: 3a09b55e32c6368e6ef7365548849b25e3ca674c